# guitoolkits2

./: CMakeLists.txt  CMakePresets.json  README.md  versions.txt
.github/workflows/: spack-ci.yml
Annotations/: CMakeLists.txt  versions.txt
Annotations/cmake/: version.cmake
Annotations/src/: CMakeLists.txt
Annotations/src/Annotations/: Annotations.doxygen  CMakeLists.txt  CaptionRepresentation.cpp  CaptionWidget.cpp  MainWidget.cpp  annotmgr.cpp  annotmgri.cpp  annotproperties.cpp  rgbcoloredit.cpp
Annotations/src/Annotations/cmake/: AnnotationsConfig.cmake.in  AnnotationsDistribution.h.in
Annotations/src/Annotations/public/Annotations/: CaptionRepresentation.h  CaptionWidget.h  MainWidget.h  annotmgr.h  annotmgri.h  annotproperties.h  rgbcoloredit.h
Annotations/src/tests/: CMakeLists.txt  main.cpp
CorbaUtil/: CMakeLists.txt  omniORBOptions.txt  tunneling.txt  versions.txt
CorbaUtil/cmake/: version.cmake
CorbaUtil/src/: CMakeLists.txt
CorbaUtil/src/CorbaUtil/: CMakeLists.txt  CorbaUtil.doxygen  NamingFacilities.cpp  ORBFacilities.cpp  ORBServices.cpp  RemoteReferencedObjectImpl.cpp  convertior.cpp  convertior.h
CorbaUtil/src/CorbaUtil/cmake/: CorbaUtilConfig.cmake.in
CorbaUtil/src/CorbaUtil/idl/CorbaUtil/: ApplicationException.idl
CorbaUtil/src/CorbaUtil/public/: ApplicationException.idl  RemoteReferencedObject.idl
CorbaUtil/src/CorbaUtil/public/CorbaUtil/: NamingFacilities.h  ORBFacilities.h  ORBServices.h  RemoteReferencedObject.idl  RemoteReferencedObjectImpl.h
CorbaUtil/src/client/: CMakeLists.txt  oceane_clt.cpp
CorbaUtil/src/connect/: CMakeLists.txt  README.txt  connect_clt.cpp  connect_srv.cpp
CorbaUtil/src/libtest/: CMakeLists.txt  Model_impl.cpp  Model_impl.h  OceaneModelHelper.cpp  OceaneModelHelper.h  OceaneServer_impl.cpp  OceaneServer_impl.h
CorbaUtil/src/libtest/idl/: ModelICorba.idl  OceaneServerICorba.idl
CorbaUtil/src/libtest/protected/: ModelICorba.idl  OceaneExceptionICorba.idl  OceaneServerICorba.idl
CorbaUtil/src/server/: CMakeLists.txt  oceane.cpp
CorbaUtil/src/ssh_tunneling/: CMakeLists.txt  oceane_server.cpp  runner_client.cpp  simple_server.cpp
CorbaUtil/src/unix_domain/: CMakeLists.txt  unix_client.cpp  unix_server.cpp
GUIToolkits/: CMakeLists.txt
GUIToolkits/cmake/: GUIToolkitsConfig.cmake.in  version.cmake
GUIToolkitsVariables/: CMakeLists.txt  versions.txt
GUIToolkitsVariables/cmake/: omniORB4.cmake  python_binding.cmake  version.cmake
Plugin/: CMakeLists.txt  versions.txt
Plugin/cmake/: version.cmake
Plugin/src/: CMakeLists.txt
Plugin/src/PluginCore/: CMakeLists.txt  Plugin.cpp  PluginCore.doxygen  PluginFunction.cpp
Plugin/src/PluginCore/cmake/: PluginCoreConfig.cmake.in
Plugin/src/PluginCore/public/PluginCore/: Plugin.h  PluginFunction.h
Plugin/src/QtPlugin/: CMakeLists.txt  QtPlugin.doxygen  QtPluginRunnerDialog.cpp
Plugin/src/QtPlugin/cmake/: QtPluginConfig.cmake.in
Plugin/src/QtPlugin/public/QtPlugin/: QtPluginRunnerDialog.h
Plugin/src/QtPluginRunner/: plugin_runner.cpp
Plugin/src/libtestplugin/: libtestplugin.cpp
Plugin/src/libtestplugin_c/: libtestplugin_c.c
Plugin/src/pluginapitest/: app_api.cpp
Plugin/src/pluginapitest/protected/: app_api.h  core.h
Plugin/src/test/: test.cpp
Preferences/: CMakeLists.txt  versions.txt
Preferences/cmake/: version.cmake
Preferences/src/CfgEditor/: CMakeLists.txt
Preferences/src/CfgUpdater/: CMakeLists.txt
Preferences/src/PrefsCore/: CMakeLists.txt
Preferences/src/PrefsQt/: CMakeLists.txt
Preferences/test_link/: CMakeLists.txt
PythonUtil/: CMakeLists.txt  versions.txt
PythonUtil/cmake/: version.cmake
PythonUtil/src/PythonScriptingTest/: CMakeLists.txt
PythonUtil/src/PythonUtil/: CMakeLists.txt
PythonUtil/src/tests/: CMakeLists.txt
PythonUtil/test_link/: CMakeLists.txt
QQualif/: CMakeLists.txt  versions.txt
QQualif/cmake/: version.cmake
QQualif/src/GQGMDS/: CMakeLists.txt
QQualif/src/GQLima/: CMakeLists.txt
QQualif/src/GQVtk/: CMakeLists.txt
QQualif/src/GQualif/: CMakeLists.txt
QQualif/src/QCalQual/: CMakeLists.txt
QQualif/src/QtQualif/: CMakeLists.txt
QQualif/src/tests/: CMakeLists.txt
QQualif/test_link/: CMakeLists.txt
QtNetwork/: CMakeLists.txt
QtNetwork/cmake/: version.cmake
QtNetwork/src/: CMakeLists.txt
QtNetwork/src/QtNetWork/: CMakeLists.txt  QtNetwork.doxygen  QtNetwork.qrc  QtNetworkFileDialog.cpp
QtNetwork/src/QtNetWork/cmake/: QtNetWorkConfig.cmake.in
QtNetwork/src/QtNetWork/public/QtNetWork/: QtNetworkFileDialog.h
QtNetwork/src/tests/: CMakeLists.txt  QtNetworkApp.cpp  QtNetworkApp.h  network_dlg.cpp
QtPython/: CMakeLists.txt  versions.txt
QtPython/cmake/: version.cmake
QtPython/test_link/: CMakeLists.txt
QtUtil/: CMakeLists.txt  versions.txt
QtUtil/cmake/: version.cmake
QtUtil/src/encoding/: CMakeLists.txt
QtUtil/test_link/: CMakeLists.txt
QtVtk/: CMakeLists.txt  versions.txt
QtVtk/cmake/: qtvtk_common.cmake  version.cmake
QtVtk/test_link/: CMakeLists.txt
QwtCharts/: CMakeLists.txt  versions.txt
QwtCharts/cmake/: version.cmake
QwtCharts/test_link/: CMakeLists.txt
TkUtil/: CMakeLists.txt  versions.txt
TkUtil/cmake/: version.cmake
TkUtil/src/TkUtil/: CMakeLists.txt
TkUtil/src/TkUtil/cmake/: TkUtilConfig.cmake.in
TkUtil/src/TkUtilScripting/: CMakeLists.txt
TkUtil/src/TkutilLauncher/: CMakeLists.txt
TkUtil/src/encoding/: CMakeLists.txt
TkUtil/src/socket_proxy/: CMakeLists.txt
TkUtil/src/socket_proxy_test/: CMakeLists.txt
TkUtil/src/tests/: CMakeLists.txt
TkUtil/test_link/: CMakeLists.txt
VtkContrib/: CMakeLists.txt  versions.txt
VtkContrib/cmake/: version.cmake  vtkcontrib_common.cmake
VtkContrib/test_link/: CMakeLists.txt
cmake/: FindAnnotations.cmake  FindGUIToolkitsVariables.cmake  FindPlugin.cmake  FindPrefsQt.cmake  FindPythonUtil.cmake  FindQQualif.cmake  FindQtNetwork.cmake  FindQtPython.cmake  FindQtUtil.cmake  FindQtVtk.cmake  FindQwtCharts.cmake  FindTkUtilScripting.cmake  FindVtkContrib.cmake  GUIToolkits2Config.cmake.in  common.cmake  version.cmake
test_link/: CMakeLists.txt  CMakePresets.json
(+22 files in other folders)
